# bookshelf

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  compose.yaml  entrypoint.sh  project_notes.txt  pyproject.toml
.github/workflows/: pipeline.yaml
bookshelf/: app.py  settings.py
bookshelf/api/: exceptions.py
bookshelf/api/authentication/: __init__.py  jwt_handler.py  password_handler.py
bookshelf/api/dependencies/: __init__.py  get_authentication_services.py  get_authorization.py  get_current_user.py  get_repositories.py
bookshelf/api/dto/: __init__.py  author.py  book.py  sanitize.py  user.py
bookshelf/api/routers/: __init__.py  authentication.py  authors.py  books.py  healthcheck.py  set_routes.py  users.py
bookshelf/domain/: author.py  authorization.py  book.py  user.py
bookshelf/repositories/: exceptions.py
bookshelf/repositories/dto/: __init__.py  authors.py  books.py  filters.py  pagination.py  users.py
bookshelf/repositories/in_memory/: __init__.py  author.py  book.py  in_memory_repository.py  user.py
tests/: conftest.py  test_app.py  test_authorization.py  test_dto.py  test_end_to_end.py
tests/fixtures/: authentication.py  author.py  author_repository.py  authorization.py  book.py  book_repository.py  client.py  db_session.py  user.py  user_repository.py
tests/test_api/: test_authentication.py  test_author.py  test_book.py  test_health_check.py  test_jwt_handler.py  test_user.py
tests/test_persistence/: test_authors_repository.py  test_books_repository.py  test_in_memory_persistence.py  test_users_repository.py
(+20 files in other folders)
