[tool.poetry]
name = "bookshelf"
version = "0.1.0"
description = "An API to manage your favorite books."
authors = ["Tomas Tamantini <tomasbft@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.111.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
isort = "^5.13.2"
taskipy = "^1.13.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "fastapi dev bookshelf/app.py"
test = "pytest"
coverage = "pytest --cov=bookshelf --cov-report=html"
